# OS

lab1/: Creator.cpp  Main.cpp  Reporter.cpp  employee.h
lab2/: CMakeLists.txt  array_processor.cpp  array_processor.h  main.cpp  tests.cpp
lab3/: CMakeLists.txt  main.cpp  marker_processor.cpp  marker_processor.h  tests.cpp
lab4/: CMakeLists.txt  message_queue.cpp  message_queue.h  receiver.cpp  sender.cpp  tests.cpp
lab4/Lab4/: CMakeLists.txt  Receiver.cpp  Sender.cpp
lab4/Lab4/tests/: input_parsing_test.cpp  message_test.cpp
lab4/Lab4/utils/: input_parsing.cpp  input_parsing.h  message_queue.cpp  message_queue.h
lab5/: CMakeLists.txt
lab5/Lab5/: CMakeLists.txt  Client.cpp  Server.cpp  common.h  file_utils.cpp  file_utils.h  lock_utils.cpp  lock_utils.h  pipe_utils.cpp  pipe_utils.h  proc_utils.cpp  proc_utils.h
lab5/Lab5/tests/: test_file_utils.cpp  test_file_utils_extra.cpp  test_integration_simulated.cpp  test_lock_utils.cpp  test_lock_utils_concurrency.cpp  test_pipe_connect_timeout.cpp  test_pipe_utils.cpp  test_proc_utils.cpp
